--- a/holaMundo/app/src/main/res/layout/activity_main.xml
+++ b/holaMundo/app/src/main/res/layout/activity_main.xml
@@ -9,27 +9,22 @@
 
     <Button
         android:id="@+id/bPresiona"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="210dp"
+        android:layout_height="119dp"
         android:layout_marginStart="160dp"
         android:layout_marginLeft="160dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="76dp"
         android:layout_marginEnd="160dp"
         android:layout_marginRight="160dp"
         android:text="Presiona"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#2196F3"
+        android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tvHolaMundo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="169dp"
-        android:layout_marginLeft="169dp"
-        android:layout_marginTop="100dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bPresiona" />
 
     <TextView
         android:id="@+id/tVpoli"
@@ -39,6 +34,9 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="188dp"
         android:text="Institución Universitaria Politécnico Grancolombiano - 2020"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textColor="#2196F3"
+        android:textColorHighlight="@color/colorAccent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bPresiona" />
 
